tests/testcases/errors/BCE0018-3.boo
"""
BCE0018-3.boo(4,2): BCE0064: No attribute with the name 'Nonsense' or 'NonsenseAttribute' was found (attribute names are case insensitive).
"""
[Nonsense("libc")]
def TestAttributeSuggestion():
	pass
